--- a/Aventureworks_Final_2/Aventureworks_Final_2.csproj
+++ b/Aventureworks_Final_2/Aventureworks_Final_2.csproj
@@ -166,6 +166,7 @@
     <Compile Include="Controllers\SalesOrderHeadersController.cs" />
     <Compile Include="Controllers\SalesPersonsController.cs" />
     <Compile Include="Controllers\SalesTaxRatesController.cs" />
+    <Compile Include="Controllers\SalesTerritoriesController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
